# aec-ifc-export

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DEFECT_B_DIAGNOSIS.md  KNOWN_LIBRARY_ISSUES.md  OPENING_VOID_DIAGNOSIS.md  ORIENTATION_DIAGNOSIS.md
docs/decisions/: adr-001-spatial-structure.md  adr-002-framing-as-elementassembly.md  adr-003-mm-to-m-units.md  adr-004-data-model-completeness.md  adr-005-geometry-placement.md  adr-006-authoritative-placement-golden-test.md  adr-007-bypass-create-2pt-wall.md  adr-008-opening-through-hole-baked-boolean.md
examples/: input_framing.json  input_walls.json
scripts/: demo.py  validate_ifc.py
src/aec_ifc_export/: __init__.py  _geom.py  _materials.py  _setup.py  exporter.py  framing.py  openings.py  spaces.py  walls.py
tests/: conftest.py  test_framing.py  test_geometry_placement.py  test_ifc_validity.py  test_materials.py  test_openings_geometry.py  test_owner_history.py  test_setup.py  test_units.py  test_wall_panel_relationship.py  test_walls.py
