[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aec-ifc-export"
version = "0.1.0"
description = "Convert AEC pipeline JSON to IFC4 (interoperability layer)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = ["aec-schema>=0.1.0", "ifcopenshell", "numpy"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["src/aec_ifc_export"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -v"
